# AIExec

./: .gitignore  Makefile  README.md
.devcontainer/: README.md  post_create_command.sh
chart_data_extractor/: README.md  package.json  pyproject.toml
chart_data_extractor/tests/graphs/: test_bar.py  test_box_and_whiskers.py  test_categorical_scale.py  test_datetime_scale.py  test_line.py  test_log_graph.py  test_pie.py  test_scatter.py  test_supergraph.py  test_unknown.py
chart_data_extractor/tests/utils/: test_detect_scale.py  test_is_grid_line.py
sdks/plugin-sdks/python/: LICENSE  README.md  pyproject.toml
sdks/plugin-sdks/python/.mkdocs/: mkdocs.yml
sdks/plugin-sdks/python/aiexec_plugin/: __init__.py  cli.py  plugin.py
sdks/plugin-sdks/python/aiexec_plugin/commands/: __init__.py  generate_docs.py
sdks/plugin-sdks/python/aiexec_plugin/config/: config.py  integration_config.py  logger_format.py
sdks/plugin-sdks/python/aiexec_plugin/core/: plugin_executor.py  plugin_registration.py  runtime.py
sdks/plugin-sdks/python/aiexec_plugin/core/documentation/: generator.py
sdks/plugin-sdks/python/aiexec_plugin/core/server/: io_server.py  router.py
sdks/plugin-sdks/python/aiexec_plugin/core/utils/: position_helper.py  yaml_loader.py
sdks/plugin-sdks/python/aiexec_plugin/entities/: __init__.py  agent.py  endpoint.py  oauth.py  provider_config.py  tool.py  workflow_node.py
sdks/plugin-sdks/python/aiexec_plugin/entities/model/: __init__.py  llm.py  moderation.py  provider.py  rerank.py  speech2text.py  text_embedding.py  tts.py
sdks/plugin-sdks/python/aiexec_plugin/file/: constants.py  file.py
sdks/plugin-sdks/python/aiexec_plugin/integration/: entities.py  run.py
sdks/plugin-sdks/python/aiexec_plugin/invocations/: file.py  storage.py  tool.py
sdks/plugin-sdks/python/examples/agent/: .env.example  README.md  manifest.yaml
sdks/plugin-sdks/python/examples/code_based_workflow/: main.py  manifest.yaml  requirements.txt
sdks/plugin-sdks/python/examples/google/: manifest.yaml  requirements.txt
sdks/plugin-sdks/python/examples/jina/: requirements.txt
sdks/plugin-sdks/python/examples/neko/: manifest.yaml  requirements.txt
sdks/plugin-sdks/python/examples/openai/: manifest.yaml  requirements.txt
sdks/plugin-sdks/python/examples/openai_compat/: manifest.yaml
sdks/plugin-sdks/python/scripts/: build_raw_docs.sh
sdks/plugin-sdks/python/tests/: test_llm_result.py  test_prompt_message.py  test_tool_call_model_init.py
sdks/plugin-sdks/python/tests/config/: test_config.py
sdks/plugin-sdks/python/tests/integration/: test_invoke_llm.py
sdks/plugin-sdks/python/tests/invocations/: test_storage.py
sdks/plugin-sdks/python/tests/servers/: test_stdio.py
sdks/plugin-sdks/python/tests/utils/: test_http_parser.py
(+2105 files in other folders)
