[tool.poetry]
name = "khulnasoft-charts"
version = "0.0.2"
description = "Package for extracting data for KHULNASOFT AI + Execute"
authors = ["khulnasoft <hello@khulnasoft.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://khulnasoft.com/"
repository = "https://github.com/khulnasoft/aiexec/tree/python"
packages = [{ include = "khulnasoft_charts" }]

[tool.poetry.dependencies]
python = "^3.10"

numpy = "^1.26.4"
matplotlib = "^3.9.2"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
python-dotenv = "^1.0.0"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/khulnasoft/aiexec/issues"
